--- a/mystyle.css
+++ b/mystyle.css
@@ -24,6 +24,7 @@
 	height : 100px;
 	width : 100%;
 	position: fixed;
+	box-shadow: 0px -4px 15px #000000;
 }
 .pageLeftMenu{
 	background-color : rgba(255,84,239,0.4);
@@ -86,7 +87,17 @@ a:hover.menuLink{
 }
 .menuLinkDiv:hover
 {
-	box-shadow: 0px -15px 15px #000000;
+	box-shadow: 0px 2px 15px -3px #000000;
 	z-index: 2;
 	transform: scale(1.2);
+}
+
+.divCircle{
+	width: 650px;
+	height: 650px;
+	border-radius: 50%;
+	margin-top: 70px;
+	margin-right: auto;
+	margin-left: auto;
+	border: 20px solid rgba(255, 0, 0, .5);
 }
