--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -38,7 +38,7 @@
 	float : left;
 	clear : none;
 	height : 1000px;
-	width : 680px;
+	width : 100%;
 }
 .pageRightMenu{
 	background-color : rgba(255,76,232,0.4);
@@ -56,6 +56,9 @@
 }
 #menu{
 	background-color: white;
+}
+.menuLink{
+	font-family: Century Gothic;
 }
 a:link.menuLink{
 	color: #182154;
@@ -91,8 +94,7 @@ a:hover.menuLink{
 	z-index: 2;
 	transform: scale(1.2);
 }
-
-.divCircle{
+/*.divCircle{
 	width: 650px;
 	height: 650px;
 	border-radius: 50%;
@@ -100,4 +102,37 @@ a:hover.menuLink{
 	margin-right: auto;
 	margin-left: auto;
 	border: 15px solid rgba(0, 0, 0, .5);
+}*/
+.divCircle{
+	position: relative;
+	max-width: 480px;
+	height: 480px;
+	border-radius: 50%;
+	top: 70px;
+	left: 260px;
+	border: 15px solid rgba(0, 0, 0, .5);
+}
+.strip{
+	width: 0px;
+	height: 50px;
+	background-color: yellow;
+	top: 100px;
+	position:absolute;
+	top: 100px;
+	left: 390px;
+	font-size: 0em;
+	transition: all 0.5s ease-in-out;
+}
+.portrait{
+	max-width: 480px;
+	border-radius: 50%;
+}
+.pageContent:hover .divCircle{	
+	left: 50px;
+	transition: 0.8s;
+}
+.pageContent:hover .strip{	
+	width: 470px;
+	font-size: 2em;
+	transition: 0.8s;
 }
