--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -4,21 +4,25 @@
 	border : 0;
 	background-color: #F0F8FF;
 }
+body{
+	background-color: 	#a7adba;
+}
 .body{
 	display : block;
 	width : 1000px;
 	overflow : auto;
 	margin : 0 auto 0 auto;
+	background-color: 	#f9c05c;
 }
 .pageHeader{
-	background-color : white;
+	background-color : #4f5b66;
 	float : left;
 	clear : none;
 	height : 100px;
 	width : 100%;
 }
 .pageHeaderFixed{
-	background-color : white;
+	background-color : #4f5b66;
 	float : left;
 	clear : none;
 	height : 100px;
@@ -34,7 +38,7 @@
 	width : 160px;
 }
 .pageContent{
-	background-color : rgba(99,255,165,0.4);
+	background-color: 	#a7adba;
 	float : left;
 	clear : none;
 	height : 1000px;
@@ -55,14 +59,15 @@
 	width : 100%;
 }
 #menu{
-	background-color: white;
+	background-color: #4f5b66;
 }
 .menuLink{
 	font-family: Century Gothic;
+	color: #c0c5ce;
+	background-color:#4f5b66;
 }
 a:link.menuLink{
-	color: #182154;
-	background-color: white;
+	background-color: #4f5b66;
 	text-decoration: none;
 	position: relative;
 	float: left;
@@ -76,11 +81,11 @@ a:hover.menuLink{
 .menuContainer{
 	float: right;
 	height:100%;
-	background-color: white;
+	background-color: #4f5b66;
 }
 .menuLinkDiv
 {
-	background-color: white;
+	background-color: #4f5b66;
 	display:inline-block;
 	border:0;
 	width:150px;
@@ -110,18 +115,18 @@ a:hover.menuLink{
 	border-radius: 50%;
 	top: 70px;
 	left: 260px;
-	border: 15px solid rgba(0, 0, 0, .5);
+	/*border: 15px solid rgba(0, 0, 0, .5);*/
 	transition: all 0.4s ease-in-out;
 }
 .strip{
 	width: 0px;
 	height: 50px;
-	background-color: yellow;
+	background-color: white;
 	position:absolute;
 	left: 390px;
 	font-size: 0em;
 	transition: all 0.4s ease-in-out;
-	 box-shadow: -3px 3px 12px 3px rgba(0,0,0,0.19);
+	box-shadow: -2px 2px 5px 2px rgba(0,0,0,0.19);
 }
 #strip1{
 	top: 100px;
