--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -123,10 +123,20 @@ a:hover.menuLink{
 	height: 50px;
 	background-color: white;
 	position:absolute;
+	/*display:inline-block;*/
 	left: 390px;
 	font-size: 0em;
 	transition: all 0.4s ease-in-out;
 	box-shadow: -2px 2px 5px 2px rgba(0,0,0,0.19);
+	transform: skew(20deg);
+	padding: 5px 20px;
+	border-radius: 5px;
+}
+.stripText{
+	background-color: white;
+	display:block;
+	transform: skew(-20deg);
+	margin-top: 5px;
 }
 #strip1{
 	top: 100px;
