--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -42,7 +42,7 @@ body{
 	background-color: 	#caedcc;
 	float : left;
 	clear : none;
-	height : 2000px;
+	height : 1600px;
 	width : 100%;
 }
 .pageRightMenu{
@@ -201,6 +201,52 @@ a:hover.menuLink{
 	border-radius: 30px;
 	margin-bottom: 10px;
 }
+.infoUnskewed1{
+	width: 80%;
+	color: #35474d;
+	background-color: #d2efee;
+	display: block;
+	position: absolute;
+	transform: skew(-20deg);
+}
+.infoUnskewed2{
+	width: 80%;
+	color: #35474d;
+	background-color: #d2efee;
+	display: block;
+	position: absolute;
+	transform: skew(20deg);
+}
+.bigIcon{
+	width: 100px;
+	display: block;
+	position: absolute;
+	left: 40px;
+	top: 40px;
+	background-color: #d2efee;
+}
+.infoText{
+	margin-left: 100px;
+	margin-top: 100px;	
+	font-family: Nexa Rust Sans Black;
+	text-align: center;
+	letter-spacing: 2px;
+	word-spacing: 2px;
+	font-size: 17px;
+}
+.infoTitle{
+	font-family: Nexa Rust Sans Black;
+	background-color: #d2efee;
+	text-align: center;
+	letter-spacing: 5px;
+	word-spacing: 2px;
+	font-size: 30px;
+	display: block;
+	position: absolute;
+	top: 70px;
+	left: 180px;
+}
+
 
 
 
