--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -218,12 +218,21 @@ a:hover.menuLink{
 	transform: skew(20deg);
 }
 .bigIcon{
-	width: 100px;
+	width: 80px;
 	display: block;
 	position: absolute;
-	left: 40px;
-	top: 40px;
+	left: 70px;
+	top: 20px;
 	background-color: #d2efee;
+}
+.infoText{
+	margin-left: 100px;
+	margin-top: 100px;	
+	font-family: Nexa Rust Sans Black;
+	text-align: center;
+	letter-spacing: 2px;
+	word-spacing: 2px;
+	font-size: 17px;
 }
 .infoText{
 	margin-left: 100px;
@@ -243,9 +252,37 @@ a:hover.menuLink{
 	font-size: 30px;
 	display: block;
 	position: absolute;
-	top: 70px;
-	left: 180px;
+	top: 40px;
+	left: 170px;
 }
+.school{
+	font-family: Nexa Rust Sans Black;
+	text-align: center;
+	font-size: 17px;
+}
+.sy{
+	font-family: MS Reference Sans Serif;
+	text-align: center;
+	font-size: 17px;
+}
+.schAdd{
+	font-family: MS Reference Sans Serif;
+	text-align: center;
+	font-size: 17px;
+}
+.education{
+	display: block;
+	text-align: left;
+	background-color: #d2efee;
+}
+.schoolDiv{
+	width: 100%;
+	position: absolute;
+	top: 100px;
+	left: 150px;
+	background-color: #d2efee;
+}
+
 
 
 
