--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -296,6 +296,13 @@ a:hover.menuLink{
 	left: 170px;
 	background-color: #d2efee;
 }
+.schoolDiv3{
+	width: 100%;
+	position: absolute;
+	top: 210px;
+	left: 190px;
+	background-color: #d2efee;
+}
 
 
 
