--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -341,9 +341,24 @@ a:hover.menuLink{
 	z-index: 1;
 	transition: all .2s ease;
 }
-
-
-
-
-
-
+.pic2{
+	position: absolute;
+	top: 0px;
+	left: 300px;
+	width: 300px;
+	height: 300px;
+	background-image: url("../images/portfolio/2.jpg");
+	background-size: cover;
+	background-position: center;
+	opacity: .5;
+}
+.pic2:hover{
+	top: -25px;
+	left: 220px;
+	width: 467px;
+	height: 350px;
+	background-image: url("../images/portfolio/2.jpg");
+	opacity: 1;
+	z-index: 1;
+	transition: all .2s ease;
+}
