--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -362,3 +362,26 @@ a:hover.menuLink{
 	z-index: 1;
 	transition: all .2s ease;
 }
+.pic3{
+	position: absolute;
+	top: 0px;
+	left: 600px;
+	width: 300px;
+	height: 300px;
+	background-image: url("../images/portfolio/3.jpg");
+	background-size: cover;
+	background-position: center;
+	opacity: .5;
+}
+.pic3:hover{
+	top: -25px;
+	left: 460px;
+	width: 467px;
+	height: 350px;
+	background-image: url("../images/portfolio/3.jpg");
+	background-color: white;
+	opacity: 1;
+	z-index: 1;
+	transition: all .2s ease;
+}
+
