--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -393,3 +393,24 @@ a:hover.menuLink{
 	height: 300px;
 	background-color: rgba(255,255,255,.8);
 }
+.pic4{
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	width: 300px;
+	height: 300px;
+	background-image: url("../images/portfolio/4.jpg");
+	background-size: cover;
+	background-position: center;
+	opacity: .5;
+}
+.pic4:hover{
+	top: -25px;
+	left: -30px;
+	width: 467px;
+	height: 350px;
+	background-image: url("../images/portfolio/4.jpg");
+	opacity: 1;
+	z-index: 1;
+	transition: all .2s ease;
+}
