--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -414,3 +414,46 @@ a:hover.menuLink{
 	z-index: 1;
 	transition: all .2s ease;
 }
+.pic5{
+	position: absolute;
+	top: 0px;
+	left: 300px;
+	width: 300px;
+	height: 300px;
+	background-image: url("../images/portfolio/5.jpg");
+	background-size: cover;
+	background-position: center;
+	opacity: .5;
+}
+.pic5:hover{
+	top: -25px;
+	left: 220px;
+	width: 467px;
+	height: 350px;
+	background-image: url("../images/portfolio/5.jpg");
+	opacity: 1;
+	z-index: 1;
+	transition: all .2s ease;
+}
+.pic6{
+	position: absolute;
+	top: 0px;
+	left: 600px;
+	width: 300px;
+	height: 300px;
+	background-image: url("../images/portfolio/6.jpg");
+	background-size: cover;
+	background-position: center;
+	opacity: .5;
+}
+.pic6:hover{
+	top: -25px;
+	left: 460px;
+	width: 467px;
+	height: 350px;
+	background-image: url("../images/portfolio/6.jpg");
+	background-color: white;
+	opacity: 1;
+	z-index: 1;
+	transition: all .2s ease;
+}
