--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -466,3 +466,118 @@ a:hover.menuLink{
 	height: 300px;
 	background-color: rgba(255,255,255,.8);
 }
+.pic7{
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	width: 300px;
+	height: 300px;
+	background-image: url("../images/portfolio/7.jpg");
+	background-size: cover;
+	background-position: center;
+	opacity: .5;
+}
+.pic7:hover{
+	top: -25px;
+	left: -30px;
+	width: 467px;
+	height: 350px;
+	background-image: url("../images/portfolio/7.jpg");
+	opacity: 1;
+	z-index: 1;
+	transition: all .2s ease;
+}
+.pic8{
+	position: absolute;
+	top: 0px;
+	left: 300px;
+	width: 300px;
+	height: 300px;
+	background-image: url("../images/portfolio/8.jpg");
+	background-size: cover;
+	background-position: center;
+	opacity: .5;
+}
+.pic8:hover{
+	top: -25px;
+	left: 220px;
+	width: 467px;
+	height: 350px;
+	background-image: url("../images/portfolio/8.jpg");
+	opacity: 1;
+	z-index: 1;
+	transition: all .2s ease;
+}
+.pic9{
+	position: absolute;
+	top: 0px;
+	left: 600px;
+	width: 300px;
+	height: 300px;
+	background-image: url("../images/portfolio/9.jpg");
+	background-size: cover;
+	background-position: center;
+	opacity: .5;
+}
+.pic9:hover{
+	top: -25px;
+	left: 460px;
+	width: 467px;
+	height: 350px;
+	background-image: url("../images/portfolio/9.jpg");
+	background-color: white;
+	opacity: 1;
+	z-index: 1;
+	transition: all .2s ease;
+}
+#row4{
+	position: relative;
+	margin-left: auto;
+	margin-right: auto;
+	top: 200px;
+	width: 600px;
+	height: 300px;
+	background-color: rgba(255,255,255,.8);
+}
+.pic10{
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	width: 300px;
+	height: 300px;
+	background-image: url("../images/portfolio/10.jpg");
+	background-size: cover;
+	background-position: center;
+	opacity: .5;
+}
+.pic10:hover{
+	top: -25px;
+	left: -30px;
+	width: 467px;
+	height: 350px;
+	background-image: url("../images/portfolio/10.jpg");
+	opacity: 1;
+	z-index: 1;
+	transition: all .2s ease;
+}
+.pic11{
+	position: absolute;
+	top: 0px;
+	left: 300px;
+	width: 300px;
+	height: 300px;
+	background-image: url("../images/portfolio/11.jpg");
+	background-size: cover;
+	background-position: center;
+	opacity: .5;
+}
+.pic11:hover{
+	top: -25px;
+	left: 220px;
+	width: 467px;
+	height: 350px;
+	background-image: url("../images/portfolio/11.jpg");
+	opacity: 1;
+	z-index: 1;
+	transition: all .2s ease;
+}
