--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -53,21 +53,7 @@ body{
 	background-color: 	#caedcc;
 	float : left;
 	clear : none;
-	height : 1300px;
-	width : 100%;
-}
-.pageRightMenu{
-	background-color : rgba(255,76,232,0.4);
-	float : left;
-	clear : none;
 	height : 1000px;
-	width : 160px;
-}
-.pageFooter{
-	background-color : 	#35474d;
-	float : left;
-	clear : none;
-	height : 300px;
 	width : 100%;
 }
 #menu{
@@ -110,6 +96,7 @@ a:hover.menuLink{
 	box-shadow: 0px 2px 15px -3px #000000;
 	z-index: 2;
 	transform: scale(1.2);
+	transition: 0.2s;
 }
 .divCircle{
 	position: relative;
